--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
 	"name": "Ruby on Rails (Community)",
 	"build": {
 		"dockerfile": "Dockerfile",
+		"context": "..",
 		"args": { 
 			// Update 'VARIANT' to pick a Ruby version: 3, 3.1, 3.0, 2, 2.7, 2.6, 2.5
 			// Append -bullseye or -buster to pin to an OS version.
